Improve Storybook Workflow

--- a/src/storybook/stories/templates/ChartDocTemplate.mdx
+++ b/src/storybook/stories/templates/ChartDocTemplate.mdx
@@ -1,11 +1,15 @@
-import {Description, Meta, Subtitle, Title} from '@storybook/blocks';
+import {Description, Meta, Subtitle} from '@storybook/blocks';
 import {SourceCollapseBlocks} from "../blocks/SourceCollapseBlocks";
 
 <Meta isTemplate />
 
-<Title />
+[//]: # (<Title children={'NONOONON'} />)
+
+## Default Title
 
 <Subtitle />
+
+## Default Subtitle
 
 <Description />
 
