--- a/src/storybook/stories/charts/parcoord-chart/parcoord-chart.mdx
+++ b/src/storybook/stories/charts/parcoord-chart/parcoord-chart.mdx
@@ -1,10 +1,10 @@
 import {Meta, Title} from "@storybook/blocks";
-import CurrentMeta from './standard-bar-chart.stories'
-import {SourceCollapseBlocks} from "../../../blocks/SourceCollapseBlocks";
+import CurrentMeta from './parcoord-chart.stories'
+import {SourceCollapseBlocks} from "../../blocks/SourceCollapseBlocks";
 
 <Meta of={CurrentMeta}/>
 
-<Title children="Standard Bar Chart"/>
+<Title children="Parallel Coordinates Chart"/>
 
 A bar chart is typically used to ...
 
