--- a/src/storybook/stories/charts/scatterplot/scatterplot.mdx
+++ b/src/storybook/stories/charts/scatterplot/scatterplot.mdx
@@ -1,6 +1,6 @@
 import {Meta, Title} from "@storybook/blocks";
-import CurrentMeta from './standard-bar-chart.stories'
-import {SourceCollapseBlocks} from "../../../blocks/SourceCollapseBlocks";
+import CurrentMeta from './scatterplot.stories'
+import {SourceCollapseBlocks} from "../../blocks/SourceCollapseBlocks";
 
 <Meta of={CurrentMeta}/>
 
