--- a/src/storybook/stories/charts/bar-chart/grouped-bar-chart/grouped-bar-chart.mdx
+++ b/src/storybook/stories/charts/bar-chart/grouped-bar-chart/grouped-bar-chart.mdx
@@ -1,15 +1,15 @@
 import {Meta, Title} from "@storybook/blocks";
-import CurrentMeta from './standard-bar-chart.stories'
+import CurrentMeta from './grouped-bar-chart.stories'
 import {SourceCollapseBlocks} from "../../../blocks/SourceCollapseBlocks";
 
 <Meta of={CurrentMeta}/>
 
-<Title children="Standard Bar Chart"/>
+<Title children="Grouped Bar Chart"/>
 
-A bar chart is typically used to ...
+A grouped bar chart is typically used to ...
 
 Below, you can see multiple examples showcasing
-how standard bar charts can be created via RespVis. For
+how grouped bar charts can be created via RespVis. For
 a full explanation about how chart stories are
 structured, see [About Chart Stories](?path=/docs/charts-about-chart-stories--docs)
 
