Restructure Stories Add additional Doc files to fill

--- a/src/storybook/stories/charts/cartesian-charts/line-chart/multi-line-chart/multi-line-chart.mdx
+++ b/src/storybook/stories/charts/cartesian-charts/line-chart/multi-line-chart/multi-line-chart.mdx
@@ -1,10 +1,10 @@
 import {Meta, Title} from "@storybook/blocks";
-import CurrentMeta from './single-line-chart.stories'
-import {SourceCollapseBlocks} from "../../../documentation-components/blocks/SourceCollapseBlocks";
+import CurrentMeta from './multi-line-chart.stories'
+import {SourceCollapseBlocks} from "../../../../documentation-components/blocks/SourceCollapseBlocks";
 
 <Meta of={CurrentMeta}/>
 
-<Title children="Single Line Chart"/>
+<Title children="Multi Line Chart"/>
 
 A line chart is typically used to ...
 
