--- a/src/storybook/stories/top-level-mdx/Respvis-Layouting.mdx
+++ b/src/storybook/stories/top-level-mdx/Respvis-Layouting.mdx
@@ -1,5 +1,5 @@
 import {Meta} from "@storybook/blocks";
-import {Tooltip} from "./documentation-components/tooltip-text";
+import {Tooltip} from "../documentation-components/tooltip-text";
 
 <Meta title='Respvis Layouting Mechanism'/>
 
