--- a/src/storybook/stories/charts/cartesian-charts/bar-chart/standard-bar-chart/standard-bar-chart.mdx
+++ b/src/storybook/stories/charts/cartesian-charts/bar-chart/standard-bar-chart/standard-bar-chart.mdx
@@ -1,6 +1,6 @@
 import {Meta, Title} from "@storybook/blocks";
-import CurrentMeta from './scatterplot.stories'
-import {SourceCollapseBlocks} from "../../documentation-components/blocks/SourceCollapseBlocks";
+import CurrentMeta from './standard-bar-chart.stories'
+import {SourceCollapseBlocks} from "../../../../documentation-components/blocks/SourceCollapseBlocks";
 
 <Meta of={CurrentMeta}/>
 
