--- a/src/storybook/stories/charts/cartesian-charts/scatterplot/scatterplot.mdx
+++ b/src/storybook/stories/charts/cartesian-charts/scatterplot/scatterplot.mdx
@@ -1,5 +1,5 @@
 import {Meta, Title} from "@storybook/blocks";
-import CurrentMeta from './standard-bar-chart.stories'
+import CurrentMeta from './scatterplot.stories'
 import {SourceCollapseBlocks} from "../../../documentation-components/blocks/SourceCollapseBlocks";
 
 <Meta of={CurrentMeta}/>
