Restructure storybook Begin Docs for RespVis Charts

--- a/src/storybook/stories/charts/cartesian-charts/scatterplot/scatterplot.mdx
+++ b/src/storybook/stories/charts/cartesian-charts/scatterplot/scatterplot.mdx
@@ -1,10 +1,10 @@
 import {Meta, Title} from "@storybook/blocks";
 import CurrentMeta from './scatterplot.stories'
-import {SourceCollapseBlocks} from "../../../documentation-components/blocks/SourceCollapseBlocks";
+import {SourceCollapseBlocks} from "../../../util/documentation-components/blocks/SourceCollapseBlocks";
 
 <Meta of={CurrentMeta}/>
 
-<Title children="Standard Bar Chart"/>
+<Title children="Standard Scatterplot"/>
 
 A bar chart is typically used to ...
 
