--- a/src/storybook/stories/top-level-mdx/RespVis Package and Modules.mdx
+++ b/src/storybook/stories/top-level-mdx/RespVis Package and Modules.mdx
@@ -1,5 +1,5 @@
 import {Meta} from "@storybook/blocks";
-import {Tooltip} from "../documentation-components/tooltip-text";
+import {Tooltip} from "../util/documentation-components/tooltip-text";
 import {modulesMap} from "../../../../gulp-tasks/constants/modules";
 import {projectAbsolutePaths} from "../../../../gulp-tasks/paths/project-absolute-paths";
 
@@ -22,3 +22,9 @@ The source code of RespVis consists of multiple typescript modules:
   Contains
 - <Tooltip text={projectAbsolutePaths.modulesPaths["respvis-tooltip"]}>***{modulesMap["respvis-tooltip"]}***</Tooltip>:
   Contains
+
+
+TODO: Explain:
+- importmap + how to use packages without npm (standalone vs. dependency based)
+- css structuring
+- structure of repo once finally decided (monorepo, mulitple packages, npm workspaces, gulp, storybook)
