Clean up Docs Continue with top-level docs

--- a/src/storybook/stories/top-level-mdx/RespVis Packages.mdx
+++ b/src/storybook/stories/top-level-mdx/RespVis Packages.mdx
@@ -3,8 +3,7 @@ import {Tooltip} from "../util/documentation-components/tooltip-text";
 import {modulesMap} from "../../../../gulp-tasks/constants/modules";
 import {projectAbsolutePaths} from "../../../../gulp-tasks/paths/project-absolute-paths";
 
-<Meta title='Respvis Package and Modules'/>
-
+<Meta title='RespVis Packages'/>
 
 # RespVis Package and Modules
 
