--- a/src/storybook/stories/top-level-mdx/CSS Caveats.mdx
+++ b/src/storybook/stories/top-level-mdx/CSS Caveats.mdx
@@ -1,10 +1,84 @@
-import {Meta} from "@storybook/blocks";
+import {Meta, Source} from "@storybook/blocks";
 
 <Meta title='CSS Caveats'/>
 
-TODO: Describe typical css caveats when working with respvis like
-- when using container queries in HTML tree, svg styles can't be changed as svg elements are not in html tree
+# CSS Caveats
+
+This article describes typical problems that can occur when styling
+components created with RespVis.
+
+
+
+## Using Container Queries
+
+Size Container Queries are a useful tool for conditionally applying
+styles if the size of a container changes. The usage of Size Container
+Queries from the outside of an SVG will work without problems. For the
+following code snippet to work properly, **_#chart-wrapper_** must either
+be the id of a parent element of the chart **_OR_** id of the chart SVG
+element itself ✅ :
+
+<Source code={`
+#chart-wrapper {
+  width: calc(100% - 1.5rem);
+  container-type: inline-size;
+  @container (width < 30rem) {
+    .legend {
+      display: none;
+    }
+  }
+}`} language={'css'}/>
+
+However, using Size Container Queries inside SVGs will have no effect ❌ :
+
+<Source code={`
+#chart-wrapper {
+  svg .legend {
+    container-type: inline-size;
+    @container (width < 30rem) {
+    text {
+      color: green;
+    }
+  }
+}`} language={'css'}/>
+
+Using Size Container Queries on the replicated HTML tree to change
+elements of the SVG tree will not have any effect either. The reason for
+this is that Container Queries can only be used to manipulate styles
+of elements *inside* of queried containers. Since the replicated HTML
+tree does not contain the SVG tree, it stays unaffected ❌ :
+
+<Source code={`
+#chart-wrapper {
+  div.legend {
+    container-type: inline-size;
+    @container (width < 30rem) {
+    text {
+      color: green;
+    }
+  }
+}`} language={'css'}/>
+
+
+
+## Using Layout Breakpoints
+
+Layout breakpoints are a built-in feature of RespVis. When using
+layout breakpoints, one must take into account two things:
+- The values of layout breakpoints are, in CSS, only available to their corresponding
+  chart (window-rv class) and their child elements. However, the current value
+  can normally be queried from outside via JavaScript.
+- Layout breakpoints need Style Container Queries to really be useful. Despite
+  growing support, one major browser (Firefox) is yet not supporting them.
+
+
+
+## Layouting of SVG Text Elements in RespVis
+
 - respvis handling of svg text baseline under the hood and the difficulties
-- layout breakpoints are only available since window-rv class as it is outest container of generated respvis structure.
 
 
+
+## Handling Transitions
+
+(TODO: Explain current handling of CSS Transitions and D3 Transitions)
