--- a/src/storybook/stories/top-level-mdx/RespVis Charts.mdx
+++ b/src/storybook/stories/top-level-mdx/RespVis Charts.mdx
@@ -1,5 +1,7 @@
 import {Meta, Source} from "@storybook/blocks";
 import ChartLayout from '../util/assets/svg/chart-layout.svg'
+import PaddingWrapperLayout from '../util/assets/svg/padding-wrapper-layout.svg'
+import PaddingWrapperLayoutCartesian from '../util/assets/svg/padding-wrapper-layout-cartesian.svg'
 import {SVGLoader} from "../util/documentation-components/svg-loader/svg-loader";
 
 <Meta title='RespVis Charts'/>
@@ -23,9 +25,9 @@ const chart = new Chart(chartWrapper, args)
 chart.buildChart()
 `} language={"typescript"}/>
 
-The code above first selects the existing div element with id **_chart-wrapper_**.
+The code above first selects the existing \<div\> element with id **_chart-wrapper_**.
 
-Then, a new **_Chart_** instance is created by passing the selected div element and
+Then, a new **_Chart_** instance is created by passing the selected \<div\> element and
 the desired arguments to the constructor. Inside the constructor, the passed arguments
 are validated. If there are serious issues with the arguments, RespVis will throw an error
 indicating what the exact problem is. Remember that RespVis is best used by utilising
@@ -49,14 +51,14 @@ render its content and become responsive. This includes:
 
 The layout structure of a RespVis chart is quite complex. It begins with
 the **_window-rv_** element. This is the same element which is passed at
-the instantiation of a chart and is expected to be an empty div element.
+the instantiation of a chart and is expected to be an empty \<div\> element.
 
 The **_window-rv_** element has two children, the **_toolbar_** and the
-**_layouter_**. Both are, again, div elements. The toolbar provides the
+**_layouter_**. Both are, again, \<div\> elements. The toolbar provides the
 viewer of a chart with interaction possibilities. The layouter, on the
 other hand, serves as wrapper for two chart hierarchies: the original
-hierarchy, consisting of an SVG node tree and a replicated div node tree,
-containing invisible div elements.
+hierarchy, consisting of an SVG node tree and a replicated \<div\> node tree,
+containing invisible \<div\> elements.
 
 The replicated node tree can be laid out with powerful CSS layout mechanisms
 like CSS Flexbox and CSS Grid. The elements of the original node tree then
@@ -89,22 +91,108 @@ The chart element contains three children: **_heading_**, **_legend_** and
 **_padding-wrapper_**. heading and legend are laid out in a similar way like the chart
 element. The padding-wrapper, on the contrary, is more complex.
 
-### Padding-wrapper
+
+### <a name="padding-wrapper"></a> Padding-wrapper
 
 To understand why a padding-wrapper is needed in the layout hierarchy in
 the first place, one needs to understand its structure:
 
-TODO: insert picture of padding wrapper + padding containers for cartesian charts here.
+<SVGLoader rawSvg={`${PaddingWrapperLayout}`} className={'svg-loader--illustration'}/>
 
-The illustration above shows ...
-WThe padding-wrapper provides a solution for issues with overflowing content.
-A common example is the usage
+<Source code={`
+  .padding-wrapper {
+    display: grid;
+    grid-template: auto 1fr auto / auto 1fr auto;
+    grid-template-areas:
+    '. padding-container--top .'
+    'padding-container--left draw-area padding-container--right'
+    '. padding-container--bottom .';
+  }`} language={'css'}/>
 
-When creating a new
-instance, two arguments are expected:
+The illustration above shows the layout structure of the padding-wrapper's
+child elements. As can be seen, the elements are laid out via CSS Grid.
 
-TODO: Describe Chart structure + padding-wrapper + overflow + link to specific chart mdx files
+The **_draw-area_** is, in the SVG node tree, a \<g\> element containing
+the graphical elements of the chart. Depending on the chart type and data it
+may contain many elements which are constrained to specific locations and
+sizes. There is no sense in laying out these elements via CSS techniques.
+Instead, this is the point were the layouting mechanism of RespVis stops and
+JavaScript and D3 take care about calculating the size and position of elements.
 
-TODO: background elements, why needed, padding-wrapper, draw-area, clippath
+Since \<g\> elements are only for grouping and do not have bounds themselves,
+the draw-area needs a [background](#background-elements) \<rect\> element which
+has the same size and position of the draw-area layout element. The bounds of
+the background element will always match with the bounds of the draw-area layout
+element.
+
+Nonetheless, since the RespVis layouting mechanism stops at the draw-area, there
+may be cases of elements overflowing the bounds of the draw-area layout. Imagine
+a scatterplot with labeled points. If a point is located at the edge of the
+draw-area, its corresponding label may partly lie out of the draw-area bounds.
+The resulting problem is that the overflowing label may intersect with elements
+of the heading or the legend.
+
+For this reason, the draw-area contains a \<clip-path\> element. It allows limiting
+the visible area for the draw-area to cut off overflowing elements. This solves the
+problem with overflowing content intersecting with other layout areas of the chart.
+However, this comes with a new issue. If used this way, overflowing elements would
+simply be cut off and become partly or completely invisible. This is where the
+padding-wrapper and the **_padding-containers_** come into play.
+
+The padding-containers reserve space in the grid for overflowing content of the
+draw-area. The \<clip-path\> element of the draw-area respects the sizes of the
+padding-containers too when calculating the bounds of the draw-area's visible
+content. The size of the padding-containers can conveniently be controlled via
+CSS variables:
+
+<Source code={`
+  .padding-container--left {
+    width: var(--chart-padding-left, 0);
+  }
+  .padding-container--top {
+    height: var(--chart-padding-top, 0);
+  }
+  .padding-container--right {
+    width: var(--chart-padding-right, 0);
+  }
+  .padding-container--bottom {
+    height: var(--chart-padding-bottom, 0);
+  }`}/>
 
 
+### Padding-wrapper for cartesian charts
+
+The padding-wrapper for cartesian charts works the same as for other charts
+but has to additionally lay out axis areas:
+
+<SVGLoader rawSvg={`${PaddingWrapperLayoutCartesian}`} className={'svg-loader--illustration'}/>
+
+<Source code={`
+  .padding-wrapper {
+    display: grid;
+    grid-template: auto auto 1fr auto auto / auto auto 1fr auto auto;
+    grid-template-areas:
+    '. . axis-top . .'
+    '. . padding-container--top . .'
+    'axis-left padding-container--left draw-area padding-container--right axis-right'
+    '. . padding-container--bottom . .'
+    '. . axis-bottom . .';
+  }`} language={'css'}/>
+
+By changing the corresponding CSS variables, as discussed in the
+[previous section](#padding-wrapper), the distance between axes and draw-area
+can be influenced. On top of the padding-wrapper's standard use cases,
+this may be useful to prevent elements to intersect with axes.
+
+
+### <a name="background-elements"></a> Background Elements
+
+Background elements are SVG \<rect\> elements which are ignored by the layout
+mechanism. They fulfill two purposes:
+1. They offer a method to register event listeners for a \<g\> element which does not
+   directly have an area for interaction.
+2. They can serve as reference elements to obtain current bounds information.
+
+By passing additional information to the render function, background elements
+become scalable. This is useful for elements having a small bounding box and
+enables to detect interaction attempts in a wider area.
