--- a/src/storybook/stories/top-level-mdx/RespVis Layouting.mdx
+++ b/src/storybook/stories/top-level-mdx/RespVis Layouting.mdx
@@ -1,62 +1,84 @@
 import {Meta} from "@storybook/blocks";
 import {Tooltip} from "../util/documentation-components/tooltip-text";
 
-<Meta title='Respvis Layouting Mechanism'/>
+<Meta title='RespVis Layouting Mechanism'/>
 
-# Respvis Layouting Mechanism
+# RespVis Layouting Mechanism
 
-To make it possible to apply HTML layout techniques like
-CSS flexbox and CSS grid to layout certain SVG elements,
-RespVis applies a non-trivial layout mechanism under the hood.
-This mechanism produces two DOM trees. The first one consists of
-the displayed SVG elements itself, the SVG-DOM tree. The second one
-replicates the elements of the first tree that need to be layed out
-as HTML elements in HTML context, the HTML-DOM tree.
+Many powerful CSS layout techniques like CSS Flexbox and CSS Grid
+are not applicable in SVG-DOM. It is important to note hereby that there
+are good reasons that styling works differently in SVG-DOM than it
+does in HTML-DOM. Elements in SVG-DOM are often constrained to specific
+locations and sizes. There is no sense in laying out these elements
+via CSS techniques. Instead, JavaScript and libraries like D3 should
+take care about calculating the size and position of elements in these
+cases.
+
+However, a complex SVG tree consists of many elements. Often, laying
+out some of these elements via layout techniques that are actually
+reserved for the HTML-DOM makes sense. To make it possible to use
+these styling techniques, RespVis applies a non-trivial layout
+mechanism under the hood. This mechanism produces two DOM trees:
+1. A tree consisting of the displayed SVG elements themselves, the
+SVG-DOM tree.
+2. A replication of the SVG-DOM tree. This tree contains replicated
+elements of the first tree as \<div\> elements that need to be layed
+out as HTML elements in the HTML-DOM, the HTML-DOM tree.
+
+
+## Special Components in Layouting Process
 
 The creation and maintaining of the HTML-DOM tree is the tricky part
-of the layout mechanism. First, let's clarify the terminology of
-special components:
-- class ***layouter***: The core component of RespVis' layouting process.
-  It is a div element which contains both, the SVG-tree and the HTML-tree.
-- class ***layout***: All HTML elements which are inside the layouter
-  component are marked as layout component since they have the responsibility
-  to lay out their SVG twin elements.
-- class ***layout-container***: SVG elements which are desired to behave like
+of the layout mechanism. To understand the process, a certain understanding
+of special components is needed:
+- class **_layouter_**: The core component of RespVis' layouting process.
+  It is a \<div\> element which contains both, the SVG-tree and the HTML-tree.
+- class **_layout_**: All elements of the replicated HTML-DOM tree are marked
+  as layout components since they have the responsibility to lay out their SVG
+  twin elements.
+- class **_layout-container_**: SVG elements which are desired to behave like
   HTML container elements must have the class layout-container.
-- class ***layout-container-positioner***: When SVG elements with class
-  layout-container are replicated as HTML div elements they get an additional
+- class **_layout-container-positioner_**: When SVG elements with class
+  layout-container are replicated as \<div\> elements, they get an additional
   wrapper element with class layout-container-positioner. These elements are
   automatically positioned by the layouter process, such that the corresponding
   layout-container element matches with the position of its parent element by
   default.
-- attribute ***data-ignore-layout***: SVG elements which are desired to not have
+- attribute **_data-ignore-layout_**: SVG elements which are desired to not have
   an HTML twin element but to be layed out as an ordinary SVG element. Attaching this
   attribute to an SVG element stops the creation of HTML context for all descendants
   of the element.
-- attribute ***data-ignore-layout-children***: Results in the same behavior like
+- attribute **_data-ignore-layout-children_**: Results in the same behavior as
   the data-ignore-layout attribute. The difference is that the element itself has
   an HTML twin and is layed out in HTML context.
 
-The above described classes and attributes are necessary for the layout process to
+
+
+## Layouting Phases
+
+The described classes and attributes are necessary for the layout process to
 function properly. The consecutive phases of layouting are:
 1. Phase(Pre-phase): The first render of the SVG-DOM tree. This must happen
    before the creation of the HTML-DOM tree as the HTML-DOM tree is
    generated out of the SVG-DOM tree.
 2. Phase: After the rendering of the SVG-DOM tree a call to the method
-   <Tooltip text="/src/lib/core/layouter/layouter.ts">***layouterCompute(layouterS)***</Tooltip>
+   <Tooltip text="/src/lib/core/layouter/layouter.ts">**_layouterCompute(layouterS)**_</Tooltip>
    happens. This call initiates the rendering of the HTML-DOM.
-3. Phase: The root of the HTML-DOM tree is prepared. It is classified as ***layout-container*** as it
-   starts the HTML layout context.
-4. Phase: The rendering of the rest of the HTML-DOM tree is carried out. This happens by subsequently
-   copying the levels of the existing SVG-DOM tree via D3 selections and data joins.
+3. Phase: The root of the HTML-DOM tree is prepared. It is classified as
+   **_layout-container_** since it starts the HTML layout context.
+4. Phase: The rendering of the rest of the HTML-DOM tree is carried out. This
+   happens by subsequently copying the levels of the existing SVG-DOM tree via
+   D3 selections and data joins.
 
-The fourth phase comes with many important checks. Once elements are encountered that break the HTML
-context propagation (data-ignore attributes) the copying of elements generally stops at that level.
-An exception to this rule are elements that have layout-container elements as descendants. This results
-in elements still being copied into the generated HTML-DOM tree when they are needed for the nested
-HTML layout contexts (otherwise the selection via css would be not intuitive anymore).
+The fourth phase comes with many important checks. Once elements are encountered
+that break the HTML context propagation (data-ignore attributes) the copying of
+elements generally stops at that level. Exceptions to this rule are elements that
+have layout-container elements as descendants. This results in elements still being
+copied into the generated HTML-DOM tree when they are needed for the nested HTML
+layout contexts (otherwise, the readability when selecting layout elements via css
+would suffer drastically).
 
 Nested HTML contexts logically come out of SVG contexts. Therefore, the default position
-for HTML contexts should be the origin of the parent of the corresponding SVG twin element.
-This is accomplished by inserting additional wrapper elements (layout-container-positioner) into
+for HTML contexts should be the parent's origin of the corresponding SVG twin element.
+This is achieved by inserting additional wrapper elements (layout-container-positioner) into
 the HTML-DOM tree. These wrapper elements are positioned exactly at said position.
