--- a/src/storybook/stories/top-level-mdx/SVG Text in RespVis.mdx
+++ b/src/storybook/stories/top-level-mdx/SVG Text in RespVis.mdx
@@ -4,40 +4,65 @@ import {Meta} from "@storybook/blocks";
 
 # SVG Text in RespVis
 
+[RespVis Layouting](?path=/docs/respvis-layouting-mechanism--docs/#-synchronizing-bounds-of-replicated-and-original-tree)
+discusses the synchronization of bounds between layout elements
+and original SVG elements. This page discusses the special case
+of \<text\> elements in this context.
+
+
+
 ## Problem Definition
 
+Text elements come with additional presentational attributes for
+alignment:
 
-SVG text elements
+- text-anchor (start | middle | end): Attribute for controlling
+  alignment in writing direction in relation to initial text position
+  (derived from x and y attributes).
+- dominant-baseline (auto | central | hanging | etc.): The
+  dominant-baseline controls the alignment of text orthogonal
+  to the writing direction (location is derived from x and y attributes).
 
-SVGs can be layed out horizontally by using the text-anchor property...
+These attributes are necessary to exactly position text elements
+in SVG-DOM as there is no box model taking care of positioning
+text automatically. RespVis' layouter mechanism, however, allows
+to use SVG \<text\> elements like ordinary text in HTML-DOM.
+To achieve this behavior, four conditions must be fulfilled:
 
-SVGs can be layed out vertically by using the dominant-baseline property ,
-which influences were text is exactly positioned relative to baseline...
+1. The center of a \<text\> element must match with the center
+   of its corresponding layout element.
+2. The width and height of a \<text\> element must match with
+   the width and height of the bounding box of its corresponding
+   layout element.
+3. The text-anchor attribute of a \<text\> element must be
+   set to start.
+4. The dominant-baseline attribute of a \<text\> element must
+   be set to central.
 
-%TODO: Explain line height issue
-These properties influence the final position of an SVG text element.
-Additionally, the real height of text elements is dependent on the used
-font. A text element may always has a computationally height of 16px, but
-the real height differs, dependent on the used font-family and characters.
+If these conditions are fulfilled, a \<text\> element will
+not only behave but will also be able to be transformed like
+text in HTML-DOM. Additionally, this way of positioning provides
+a uniform system for layouting \<text\> elements and saves chart
+developers from struggling with the different text alignment
+attributes.
 
-
-## The solution
-
-
-### Alignment of Layout Element and SVG Element (Horizontal Case)
-
-%TODO: Explain Solution
-To address all these problems and make it possible to properly lay out
-SVG text elements exactly like their div counterpart, the dominant baseline
-of the SVG text element had to be aligned with the vertical center of the
-div counterpart. Additionally choosing an text-anchor property of start is
-finally sufficient to give svg text elements the exact position in the center
-of their div counterpart.
-
-
-### Alignment of Layout Element and SVG Element (Vertical Case)
-
-
-
+[//]: # (TODO: Explain line height issue)
+[//]: # (These properties influence the final position of an SVG text element.)
+[//]: # (Additionally, the real height of text elements is dependent on the used)
+[//]: # (font. A text element may always have a computational height of 16px, but)
+[//]: # (the real height differs, dependent on the used font-family and characters.)
 
 
+
+## Layouting Mechanism for SVG Text Elements
+
+To achieve the conditions listed in the previous sections,
+RespVis conducts the following steps:
+1. Width and height of the layout element are set to
+width and height of the \<text\> element.
+2. The layout element is positioned with CSS in HTML-DOM.
+3. x any y attributes of the \<text\> element are set such
+that the element's center matches exactly with the layout
+element's center.
+
+[//]: # (maybe include images describing the steps here)
