Continue with top-level docs

--- a/src/storybook/stories/respvis-arguments/respvis-arguments.mdx
+++ b/src/storybook/stories/respvis-arguments/respvis-arguments.mdx
@@ -1,6 +1,6 @@
 import {Meta} from "@storybook/blocks";
 
-<Meta title='Charts/RespVis Arguments' name='RespVis Arguments' />
+<Meta title='RespVis Arguments/RespVis Arguments' name='RespVis Arguments' />
 
 # RespVis Arguments
 
