--- a/src/storybook/stories/top-level-mdx/CSS Caveats.mdx
+++ b/src/storybook/stories/top-level-mdx/CSS Caveats.mdx
@@ -96,6 +96,10 @@ hereby. Otherwise, the layout mechanism of RespVis will treat the element
 as horizontally oriented.
 
 
-## Handling Transitions
 
-(TODO: Explain current handling of CSS Transitions and D3 Transitions)
+[//]: # (## Handling Transitions)
+[//]: # ()
+[//]: # (//Supports and uses both: D3 Transitions and CSS Transitions)
+[//]: # (// CSS Transitions used where possible: low computational cost. easy to override by library user)
+[//]: # (// D3 Transitions for more complicated transitions but may be in conflict with respvis rerender.)
+[//]: # (&#40;TODO: Explain current handling of CSS Transitions and D3 Transitions&#41;)
