--- a/src/storybook/stories/top-level-mdx/SVG Text in RespVis.mdx
+++ b/src/storybook/stories/top-level-mdx/SVG Text in RespVis.mdx
@@ -19,25 +19,35 @@ alignment:
 - text-anchor (start | middle | end): Attribute for controlling
   alignment in writing direction in relation to initial text position
   (derived from x and y attributes).
-- dominant-baseline (auto | central | hanging | etc.): The
-  dominant-baseline controls the alignment of text orthogonal
-  to the writing direction (location is derived from x and y attributes).
+- dominant-baseline (auto | central | hanging | etc.): Attribute for
+  controlling the exact position of the baseline. The baseline is an
+  imaginary line where most of the characters of a text rest. The
+  dominant-baseline attribute is, together with the x and y attributes,
+  responsible for the alignment of text orthogonal to the writing
+  direction.
 
 These attributes are necessary to exactly position text elements
 in SVG-DOM as there is no box model taking care of positioning
-text automatically. RespVis' layouter mechanism, however, allows
-to use SVG \<text\> elements like ordinary text in HTML-DOM.
-To achieve this behavior, four conditions must be fulfilled:
+text automatically. One goal of RespVis' layouter mechanism is,
+however, to lay out SVG \<text\> elements exactly like ordinary
+text in HTML-DOM. To achieve this behavior, three conditions must
+be fulfilled:
 
 1. The center of a \<text\> element must match with the center
-   of its corresponding layout element.
+   of its corresponding layout element. The main problem which
+   must be considered hereby is the positioning of the baseline.
+   The \<text\> element's baseline position can be controlled by
+   the dominant-baseline attribute, but this alone is not sufficient
+   as there is no available option leading to the desired result.
+   RespVis solves this problem in two steps:
+   - Setting dominant-baseline to central
+   - Adapting manually the position of the \<text\> element via
+     JavaScript.
 2. The width and height of a \<text\> element must match with
    the width and height of the bounding box of its corresponding
    layout element.
 3. The text-anchor attribute of a \<text\> element must be
    set to start.
-4. The dominant-baseline attribute of a \<text\> element must
-   be set to central.
 
 If these conditions are fulfilled, a \<text\> element will
 not only behave but will also be able to be transformed like
@@ -46,17 +56,10 @@ a uniform system for layouting \<text\> elements and saves chart
 developers from struggling with the different text alignment
 attributes.
 
-[//]: # (TODO: Explain line height issue)
-[//]: # (These properties influence the final position of an SVG text element.)
-[//]: # (Additionally, the real height of text elements is dependent on the used)
-[//]: # (font. A text element may always have a computational height of 16px, but)
-[//]: # (the real height differs, dependent on the used font-family and characters.)
-
-
 
 ## Layouting Mechanism for SVG Text Elements
 
-To achieve the conditions listed in the previous sections,
+To achieve the conditions listed in the previous section,
 RespVis conducts the following steps:
 1. Width and height of the layout element are set to
 width and height of the \<text\> element.
@@ -64,5 +67,3 @@ width and height of the \<text\> element.
 3. x any y attributes of the \<text\> element are set such
 that the element's center matches exactly with the layout
 element's center.
-
-[//]: # (maybe include images describing the steps here)
