Properly add sources and licenses for icons Include storybook deployment

--- a/src/storybook/stories/top-level-mdx/RespVis Packages.mdx
+++ b/src/storybook/stories/top-level-mdx/RespVis Packages.mdx
@@ -5,7 +5,7 @@ import {projectAbsolutePaths} from "../../../../gulp-tasks/paths/project-absolut
 
 <Meta title='RespVis Packages'/>
 
-# RespVis Package and Modules
+# RespVis Packages
 
 The source code of RespVis consists of multiple typescript modules:
 
