Continue with docs

--- a/src/storybook/stories/contributing/contributing.mdx
+++ b/src/storybook/stories/contributing/contributing.mdx
@@ -10,5 +10,6 @@ which guidelines must be considered when doing so.
 - [Development Environment](?path=/docs/contributing-development-environment--docs)
 - [Project Structure](?path=/docs/contributing-project-structure--docs)
 - [Contribution Guidelines](?path=/docs/contributing-contribution-guidelines--docs)
-- [Documenting and Testing](?path=/docs/contributing-documenting-and-testing--docs)
 - [Deployment](?path=/docs/contributing-deployment--docs)
+
+[//]: # (- [Documenting and Testing]&#40;?path=/docs/contributing-documenting-and-testing--docs&#41;)
