--- a/src/storybook/stories/contributing/deployment.mdx
+++ b/src/storybook/stories/contributing/deployment.mdx
@@ -8,6 +8,21 @@ import {Meta} from "@storybook/blocks";
 
 ## GitHub Workflow
 
+The RespVis repository contains GitHub workflows which are executed
+automatically on certain events:
+- The development workflow is triggered if new commits are pushed to
+  the develop branch, including merging approved pull requests.
+  The workflow is responsible for deploying RespVis'
+  [self-contained examples](https://respvis-dev.netlify.app/)
+  and the [live documentation](https://respvis-dev-docs.netlify.app/)
+  reflecting the state of the develop branch's latest commit.
+- The release workflow is triggered if a new tag is pushed to
+  the repository. New tags should _always_ be created on the master
+  branch, as they represent versions of the repository which are also
+  published as packages on npm. The workflow is responsible for deploying
+  RespVis' [self-contained examples](https://respvis.netlify.app/)
+  and the [live documentation](https://respvis-docs.netlify.app/)
+  reflecting the state of the pushed tag's commit.
 
 
 ## Manual Deployment
