--- a/src/storybook/stories/top-level-mdx/respvis.mdx
+++ b/src/storybook/stories/top-level-mdx/respvis.mdx
@@ -6,7 +6,7 @@ import {DevWrapper} from "../util/documentation-components/dev-wrapper/dev-wrapp
 <Meta title='RespVis'/>
 
 <DevWrapper>
-  ### ‼️ Note that the links below lead to the live documentation page at [respvis-docs.netlify.app](https://respvis-dev-docs.netlify.app) since the content below is only a replication of the original readme.
+  ### ‼️ Note that the links below lead to the live documentation page at [respvis-docs.netlify.app](https://respvis-docs.netlify.app) since the content below is only a replication of the original readme.
 </DevWrapper>
 
 <ReactMarkdown>{Readme}</ReactMarkdown>
