--- a/src/storybook/stories/using-respvis/arguments/chart-arguments/chart-arguments.mdx
+++ b/src/storybook/stories/using-respvis/arguments/chart-arguments/chart-arguments.mdx
@@ -39,7 +39,7 @@ they are only used as means by other arguments to gain fine-grained control abou
 The breakpoints listed above are used for the following arguments, keep that in mind.
 
 
-### <a name="nested-breakpoints"></a> Nested BreakPoints
+### Nested BreakPoints
 
 The breakPoints argument can be specified for certain subcomponents too (e.g. for axes). This enables the
 creation of nested breakpoint layers if desired. For example, breakpoints might be specified for a chart as
@@ -51,7 +51,7 @@ of the axis. If the layout state of the axis is not defined, it will refer to th
 which is typically the chart. The way RespVis handles the layout state can be adapted by stating
 additional arguments.
 
-## <a name="title-argument"></a> Title Argument
+## Title Argument
 
 The title arg lets the user define the title of a chart. It can either simply be specified as
 string or one can make use of the breakpoints as explained in the [breakpoints section](#breakpoints-argument).
