--- a/src/storybook/stories/using-respvis/layout-breakpoints.mdx
+++ b/src/storybook/stories/using-respvis/layout-breakpoints.mdx
@@ -59,10 +59,10 @@ the chart will get overridden for all nested child elements of the axis.
 
 For a live demonstration of how certain arguments can make use of
 breakpoints, take a look at
-[Chart Arguments](?path=/docs/respvis-arguments-chart-arguments--docs).
+[Chart Arguments](?path=/docs/using-respvis-arguments-chart-arguments--docs).
 
 
-## <a name="using-defined-breakpoints-in-css"></a> Using Defined Breakpoints in CSS
+## Using Defined Breakpoints in CSS
 
 The way breakpoints are defined in RespVis avoids the need to specify them
 a second time in CSS. Instead, one can make use of style container queries,
@@ -87,7 +87,7 @@ queries are a recent feature and still in the process of coming to
 the web (Firefox and Safari do not support them yet).
 
 
-## <a name="controlling-layout-widths-with-css-variables"></a> Controlling Layout Widths with CSS Variables
+## Controlling Layout Widths with CSS Variables
 
 Another advantage of storing the current state of layout width in
 CSS variables is the capability of scaling and shifting all
@@ -116,4 +116,4 @@ their original positions. For the given example, following breakpoints emerge:
 JavaScript considers the adapted positions of layout breakpoints automatically.
 For stylesheets to automatically consider the changes too, it is necessary to
 use styled container queries like described in
-[Controlling Layout Widths with CSS Variables](#using-defined-breakpoints-in-css)
+[Using Defined Breakpoints in CSS](#using-defined-breakpoints-in-css)
