--- a/src/storybook/stories/using-respvis/layouting-svg-text.mdx
+++ b/src/storybook/stories/using-respvis/layouting-svg-text.mdx
@@ -4,7 +4,7 @@ import {Meta} from "@storybook/blocks";
 
 # Layouting SVG Text
 
-[RespVis Layouting](?path=/docs/respvis-layouting-mechanism--docs/#-synchronizing-bounds-of-replicated-and-original-tree)
+[Synchronizing Bounds of Replicated and Original Tree](?path=/docs/using-respvis-layouting-mechanism--docs/#-synchronizing-bounds-of-replicated-and-original-tree)
 discusses the synchronization of bounds between layout elements
 and original SVG elements. This page discusses the special case
 of \<text\> elements in this context.
