--- a/src/storybook/stories/top-level-mdx/future-outlook.mdx
+++ b/src/storybook/stories/top-level-mdx/future-outlook.mdx
@@ -8,9 +8,20 @@ import {Meta} from "@storybook/blocks";
 
 ## Features
 
+- Add CSS Variables to allow controlling the duration of D3
+  Transitions.
 
 
 ## Restructuring
+
+- Test removal of path aliases and working with workspace
+  module resolution instead.
+
+
+
+## Documentation and Testing
+
+- Add Guidelines for changing storybook documentation
 
 
 
