--- a/src/storybook/stories/using-respvis/arguments/axis-arguments/base-axis-arguments/base-axis-arguments.mdx
+++ b/src/storybook/stories/using-respvis/arguments/axis-arguments/base-axis-arguments/base-axis-arguments.mdx
@@ -14,8 +14,8 @@ import {
 This part of the documentation explains arguments which operate on axis level
 and can be passed to all chart types containing axes. The exact API for
 different chart types may slightly differ
-(e.g. [Cartesian Charts](?path=/docs/charts-cartesian-charts--about-cartesian-charts)
-and [Parallel Coordinates Charts](?path=/docs/charts-parallel-coordinates-chart--docs) expect
+(e.g. [Cartesian Charts](?path=/docs/using-respvis-charts-chart-examples-cartesian-charts--cartesian-charts)
+and [Parallel Coordinates Charts](?path=/docs/using-respvis-charts-chart-examples-parallel-coordinates-chart--docs) expect
 the parameters in a different way), but the concept stays the same.
 The practical usage of axis arguments is demonstrated by the creation of example multi line charts.
 
@@ -24,7 +24,7 @@ The practical usage of axis arguments is demonstrated by the creation of example
 ## Title and SubTitle Arguments
 
 The configuration of titles and subtitles for axes works the same way as it works
-for charts, see [Chart Title Argument](?path=/docs/charts-respvis-arguments-chart-arguments--docs/#-title-argument).
+for charts, see [Chart Title Argument](?path=/docs/using-respvis-arguments-chart-arguments--docs#-title-argument).
 
 
 
@@ -51,7 +51,7 @@ transitioning from one breakpoint to another:
 The code snippet above shows the configuration arguments of the x-axis of a cartesian chart.
 Note the _*breakPoints*_ argument. This tells RespVis to compute the current layout state out
 of the width of the axis rather than the width of the surrounding chart, see
-[nested breakpoints](?path=/docs/charts-respvis-arguments-chart-arguments--docs/#-nested-breakpoints).
+[nested breakpoints](?path=/docs/using-respvis-arguments-chart-arguments--docs#nested-breakpoints).
 The tickOrientation argument states that the labels should be rotated by 90 degrees at layout width 0,
 while being not rotated at layout width 3. RespVis automatically interpolates the angle in between these
 layout widths.
